Fixxed Spacing on positioning

--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -142,14 +142,14 @@
   background-color: red; 
 } 
 .green5 { 
-  width: 250px; 
-  height: 250px; 
+  width: 150px; 
+  height: 150px; 
   background-color: green; 
   float: left;
 } 
 .yellow5 {
   width: 100%; 
-  height: 350px; 
+  height: 200px; 
   background-color: gold; 
 
 } 
@@ -164,7 +164,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: repeat(6, 1fr);
-  height: 600px;
+  height: 400px;
 }
 .red6 {
   width: 100%; 
